# scylla-cloud-getting-started

./: README.MD  amplify.yaml
.github/workflows/: docs-amplify-enhanced.yaml  docs-links.yaml  docs-pages.yaml  docs-pr.yaml
alternator/php/: .gitignore  README.MD  app.php  composer.json
alternator/php/src/: App.php  Migration.php
alternator/python/: README.MD  app.py  helpers.py
csharp/: .gitignore  Cli.cs  Constants.cs  DataBase.cs  MediaPlayer.csproj  MediaPlayer.sln  Program.cs  README.md  Song.cs
csharp/Constants/: Queries.cs
csharp/Helper/: DataBaseHelper.cs  ValidationHelper.cs
csharp/Models/: Song.cs
docs/: .gitignore  CNAME  Makefile  build-with-javascript.md  conf.py  getting-started.md  index.rst  java.md  nodejs.md  pyproject.toml  python.md
docs/_utils/: pyproject_template.toml
docs/source/: build-with-csharp.md  build-with-elixir.md  build-with-golang.md  build-with-java.md  build-with-javascript.md  build-with-python.md  build-with-ruby.md  build-with-rust.md  conf.py  design-and-data-model.md  getting-started.md  index.rst
docs/source/alternator/: build-with-php.md  build-with-python.md  getting-started.md
elixir/: .env.example  README.md  mix.exs
elixir/lib/: media_player.ex
elixir/lib/media_player/: actions.ex  commands.ex
elixir/test/: media_player_test.exs
go/: .env.example  README.md  go.mod  go.sum
go/Internal/commands/: addSongCommand.go  deleteSongCommand.go  listAllSongsCommnad.go  stressCommand.go
go/Internal/database/: connection.go  song.go
go/cmd/: main.go
go/internal/controllers/: song_controller.go  (+1 more)
java/: .env.example  .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
javascript/: .env.example  README.md  index.js  package-lock.json  package.json
python/: .env.example  .gitignore  README.MD  aaaa.py  cli.py  environment.py  helpers.py  migrate.py  schema.cql
ruby/: .rubocop.yml  Gemfile  README.md  main.rb
ruby/config/: application.rb  constants.rb
rust/: Cargo.toml  README.MD
rust/src/: commands.rs  database.rs  datetime.rs  main.rs  migrate.rs  repository.rs  songs.rs
(+27 files in other folders)
