[tool.poetry]
name = "ScyllaDB Cloud Getting Started"
description = "ScyllaDB Cloud Example Documentation"
version = "1.0"
authors = ["ScyllaDB Documentation Contributors"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "6.0.1"
pygments = "2.15.1"
sphinx-scylladb-theme = "~1.5.1"
sphinx-autobuild = "2021.3.14"
Sphinx = "4.3.2"
sphinx-multiversion-scylla = "~0.2.11"
sphinx-sitemap = "2.5.0"
redirects_cli ="~0.1.3"
myst-parser = "0.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"