[package]
name = "media_player"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
futures = "0.3.31"
scylla = { version = "0.15.1" , features = ["chrono-04"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
